--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "API para mostrar filmes do TMDB",
   "main": "src/server.js",
-  "proxy" : "http://localhost:4567",
+  "proxy": "http://localhost:4567",
   "scripts": {
     "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js",
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
