--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   "homepage": "https://github.com/robertoguedesf/desafio-TMDB#readme",
   "dependencies": {
     "axios": "^0.21.4",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.95.11",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
